4.1
 * update Python test framework from nose to pytest (CASSANDRA-17293)
 * Fix improper CDC commit log segments deletion in non-blocking mode (CASSANDRA-17233)
 * Add support for string concatenations through the + operator (CASSANDRA-17190)
 * Limit the maximum hints size per host (CASSANDRA-17142)
 * Add a virtual table for exposing batch metrics (CASSANDRA-17225)
 * Flatten guardrails config (CASSANDRA-17353)
 * Instance failed to start up due to NPE in StartupClusterConnectivityChecker (CASSANDRA-17347)
 * add the shorter version of version flag (-v) in cqlsh (CASSANDRA-17236)
 * Make vtables accessible via internode messaging (CASSANDRA-17295)
 * Add support for PEM based key material for SSL (CASSANDRA-17031)
 * Standardize storage configuration parameters' names. Support unit suffixes. (CASSANDRA-15234)
 * Remove support for Windows (CASSANDRA-16956)
 * Runtime-configurable YAML option to prohibit USE statements (CASSANDRA-17318)
 * When streaming sees a ClosedChannelException this triggers the disk failure policy (CASSANDRA-17116)
 * Add a virtual table for exposing prepared statements metrics (CASSANDRA-17224)
 * Remove python 2.x support from cqlsh (CASSANDRA-17242)
 * Prewarm role and credential caches to avoid timeouts at startup (CASSANDRA-16958)
 * Make capacity/validity/updateinterval/activeupdate for Auth Caches configurable via nodetool (CASSANDRA-17063)
 * Added startup check for read_ahead_kb setting (CASSANDRA-16436)
 * Avoid unecessary array allocations and initializations when performing query checks (CASSANDRA-17209)
 * Add guardrail for list operations that require read before write (CASSANDRA-17154)
 * Migrate thresholds for number of keyspaces and tables to guardrails (CASSANDRA-17195)
 * Remove self-reference in SSTableTidier (CASSANDRA-17205)
 * Add guardrail for query page size (CASSANDRA-17189)
 * Allow column_index_size_in_kb to be configurable through nodetool (CASSANDRA-17121)