@@ -24,6 +24,7 @@ import os
 import re
 import sys
 import platform
+import wcwidth
 
 from six import ensure_text
 
@@ -31,7 +32,6 @@ from collections import defaultdict
 
 from cassandra.cqltypes import EMPTY
 from cassandra.util import datetime_from_timestamp
-from . import wcwidth
 from .displaying import colorme, get_str, FormattedValue, DEFAULT_VALUE_COLORS, NO_COLOR_MAP
 from .util import UTC
 
