@@ -15,3 +15,4 @@ parse
 psutil
 pycodestyle
 pytest
+wcwidth
